# algo_trading_sample

./: .gitignore  .gitmodules
src/cc/: CMakeLists.txt
src/cc/lib/: CMakeLists.txt
src/cc/src/: CMakeLists.txt  main.cc
src/cc/src/third_party_broker_api/alpaca/: alpaca_trading_api.cc
src/cc/src/third_party_broker_api/alpaca/include/: alpaca_trading_api.h  alpaca_trading_constants.h
src/cc/src/utils/: json_client.cc
src/cc/src/utils/include/: json_client.h
src/cc/test/: CMakeLists.txt  alpaca_trading_api_test.cc
src/python/: main.py
